# arbitrage-calculator-main

./: .env.example  .gitignore  ADVANCED_MODELS_RESEARCH.md  AGENTS.md  COLAB_EXECUTOR_README.md  Cloud_GPU_Matcher.ipynb  Cloud_GPU_Matcher_v3_Auto.ipynb  Cloud_GPU_Matcher_v3_Auto.ipynb.backup  Cloud_GPU_Matcher_v3_Enhanced.ipynb  Dockerfile  Dockerfile.single  MATCHING_EXAMPLES.md  MATCHING_IMPROVEMENTS_GUIDE.md  README.md  check_ngrok.py  colab_cell_4_fixed.py  colab_cell_5_fixed.py  colab_executor.py  colab_rank_cell.py  debug_kalshi_api.py  debug_kalshi_api_v1.py  debug_kalshi_api_v2.py  demo.sh  docker-compose-single.yml  docker-compose.yml  docker-entrypoint-single.sh  docker-entrypoint.sh  featured.json  ngrok_log.txt  out.txt  package-lock.json  package.json  push_error.txt  pyproject.toml  requirements.txt  run_engine.py  run_matcher.sh  sample_market.json  setup_oracle_cloud.py  so.html  (+8 more)
backend/: colab_executor.py  data_collector.py  database.py  fetch_github_repos.py  github_search_results.txt  html_report_generator.py  llm_openrouter.py  llm_parallel_workers.py  llm_verifier.py  logger.py  main.py  matcher.py  orchestrator.py  scanner.py  semantic_matcher.py  weather_edge.py  websocket_colab.py  websocket_server.py  whale_tracker.py
client/src/: App.tsx
engine/: arb_engine.py
feeds/: ibkr_event_discovery.py  ibkr_forecast.py  kalshi.py
shared/: market.py
tmp/: monitor_sync.py
tools/: discover_forecast_contract.py  discover_ib_contracts.py  discover_ib_events.py  forecast_price.py  semantic_matcher.py  stream_price.py  test_ib.py  text_matcher.py
(+12 files in other folders)
